# unihan-etl

./: .coveragerc  .gitignore  .python-version  .tmuxp.yaml  .tool-versions  .travis.yml  AGENTS.md  CHANGES  CITATION.cff  LICENSE  MANIFEST.in  MIGRATION  Makefile  Pipfile  README.md  README.rst  TODO  __about__.py  __init__.py  conftest.py  datapackage.json  justfile  package_metadata.py  pyproject.toml  run-tests.py  setup.cfg  setup.py
.github/: contributing.md
.github/workflows/: codeql-analysis.yml  docs.yml  publish-docs.yml  tests.yml
cihaidata_unihan/: __main__.py  _compat.py  process.py  util.py
doc/: FAQ.rst  Makefile  about.rst  api.rst  cli.rst  conf.py  index.rst  requirements.pip  spec.rst  unihan.rst
doc/_ext/: changelog.py
doc/_templates/: more.html  star.html
docs/: AGENTS.md  FAQ.md  Makefile  api.md  api.rst  cli.md  conf.py  index.md  index.rst  justfile  pytest-plugin.md  quickstart.md  redirects.txt  unihan.md  unihan.rst  use-cases.md
docs/_ext/: __init__.py  argparse_exemplar.py  argparse_lexer.py  changelog.py  cli_usage_lexer.py  link_issues.py  pretty_argparse.py
docs/_ext/sphinx_argparse_neo/: compat.py  parser.py
docs/api/: constants.md  core.md  expansion.md  index.md  options.md  pytest-plugin.md  test.md  types.md  utils.md
docs/api/internals/: index.md
docs/cli/: download.md  export.md  fields.md  files.md  index.md  search.md
docs/examples/: advanced-api.md  basic-usage.md  character-filtering.md  custom-fields.md  data-integration.md  educational-tools.md  index.md  input-method.md  linguistic-analysis.md  software-development.md  stroke-order.md
docs/internals/: index.md
docs/internals/api/: app_dirs.md  index.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
docs/topics/: faq.md  index.md  unihan.md
requirements/: base.txt  dev.txt  doc.txt  test.txt
scripts/: __init__.py  _compat.py  process.py  test.py  unicodecsv.py  util.py
src/unihan_etl/: __about__.py  __init__.py  __main__.py  app_dirs.py  constants.py  core.py  expansion.py  options.py  process.py  pytest_plugin.py  test.py  types.py  util.py  validator.py
src/unihan_etl/_internal/: __init__.py  app_dirs.py  private_path.py
src/unihan_etl/cli/: __init__.py  _colors.py  _formatter.py  _output.py  download.py  export.py  fields.py  files.py  search.py
src/unihan_etl/data_files/quick/: Unihan_DictionaryIndices.txt  Unihan_DictionaryLikeData.txt  Unihan_IRGSources.txt  Unihan_NumericValues.txt  Unihan_OtherMappings.txt  Unihan_RadicalStrokeCounts.txt  Unihan_Readings.txt
tests/: __init__.py  conftest.py  constants.py  test_caching.py  test_expansion.py  test_pytest_plugin.py  test_unihan.py  test_util.py  test_validator.py  test_xdist_safety.py
tests/_internal/: __init__.py  test_app_dirs.py  test_private_path.py
tests/cli/: __init__.py  conftest.py  test_cli.py  test_colors.py  test_fields.py  test_files.py  test_formatter.py  test_output.py  test_search.py
tests/docs/_ext/: __init__.py  test_cli_usage_lexer.py  test_pretty_argparse.py
tests/examples/: test_advanced_api.py  test_advanced_configuration.py  test_api_development.py  test_basic_usage.py  test_character_filtering.py  test_character_lookup.py  test_cross_language_comparison.py  test_custom_fields.py  test_custom_pipeline.py  test_data_integration.py  test_educational_filtering.py  test_educational_tools.py  test_historical_variants.py  test_input_method.py  test_intelligent_input.py  test_learning_progression.py  test_linguistic_analysis.py  test_multilingual_lookup.py  test_radical_groups.py  test_research_analysis.py  test_simplified_traditional.py  test_software_dev.py  test_stroke_order.py  test_unihan_fields.py
tests/fixtures/: Unihan_DictionaryIndices.txt  Unihan_DictionaryLikeData.txt  Unihan_IRGSources.txt  Unihan_OtherMappings.txt  Unihan_RadicalStrokeCounts.txt  Unihan_Readings.txt
testsuite/: __init__.py  helpers.py  test_config.yml  unihan.py
type_stubs/pygments/: lexer.pyi
unihan_etl/: __about__.py  __main__.py  _compat.py  constants.py  expansion.py  process.py  test.py  types.py  util.py
unihan_tabular/: __about__.py  constants.py  expansion.py  process.py
